--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </head>
 
 <body>
-    <h1>Sorry, my website is still in the works! Check ya later. :)</h1>
+    <h1>Sorry, my website is still in the works! Check ya later. :) - Isaac</h1>
 </body>
 
 </html>
